syntax = "proto3";

package electra.dao;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "electra/dao/params.proto";
import "electra/dao/membership.proto";

option go_package = "electra/x/dao/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/electra/dao/params";
  
  }
  
  // Queries a list of Membership items.
  rpc Membership    (QueryGetMembershipRequest) returns (QueryGetMembershipResponse) {
    option (google.api.http).get = "/electra/dao/membership/{memberaddress}";
  
  }
  rpc MembershipAll (QueryAllMembershipRequest) returns (QueryAllMembershipResponse) {
    option (google.api.http).get = "/electra/dao/membership";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetMembershipRequest {
  string memberaddress = 1;
}

message QueryGetMembershipResponse {
  Membership membership = 1 [(gogoproto.nullable) = false];
}

message QueryAllMembershipRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllMembershipResponse {
  repeated Membership                             membership = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

